k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio-staging
  labels:
    app: portfolio
    environment: staging
spec:
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
